--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -2,8 +2,15 @@ seed: 42
 
 # data paths
 raw_data_path: /workspaces/ChatbotWiz/data/raw/dataset.txt
-conv_path: /workspaces/ChatbotWiz/data/processed/conversations.csv
-topics_path: /workspaces/ChatbotWiz/data/processed/topics.csv
+topic_modelling_folder: /workspaces/ChatbotWiz/data/processed/topic_modelling/
+first_message: first_message.csv
+first_message_topic: first_message_topic.csv
+topic_clf_folder: /workspaces/ChatbotWiz/data/processed/topic_clf/
+X_train: X_train.csv
+y_train: y_train.csv
+X_test: X_test.csv
+y_test: y_test.csv
+
 
 # parsing config
 encoding: cp865
