--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -36,13 +36,31 @@ parameters:
   - 5
 
 
-# To remove outputs folder created by hydra
-defaults:  
-  - _self_  
-  - override hydra/hydra_logging: disabled  
-  - override hydra/job_logging: disabled  
+# To remove outputs folder created by hydra if you don't redefine job_logging in hydra bellow
+
+# defaults:  
+#   - _self_  
+#   - override hydra/hydra_logging: disabled  
+#   - override hydra/job_logging: disabled  
+  
   
 hydra:
   output_subdir: null
   run:
     dir: .
+  job_logging:
+    version: 1
+    formatters:
+      simple:
+        format: "%(levelname)s %(asctime)s [%(filename)s:%(funcName)s:%(lineno)d] %(message)s"
+    handlers:
+      console:
+        class: logging.StreamHandler
+        formatter: simple
+        stream: ext://sys.stdout
+      file:
+        class: logging.FileHandler
+        formatter: simple
+        filename: logs/${hydra.job.name}.log
+
+    disable_existing_loggers: false
